fix scripts card slider & card taba for ajax

--- a/src/templates/partials/_popup.html
+++ b/src/templates/partials/_popup.html
@@ -268,7 +268,7 @@
 
 						<h2 class="h2 page-title">Сопутствующие товары</h2>
 
-						<div class="tab js-card-tab-related">
+						<div class="tab js-card-tab-related--modal">
 							<ul class="tab__titles">
 								<li class="tab__title js-related-tab">
 									<a class="tab__link" href="#related-tabs-1">
@@ -317,7 +317,7 @@
 								<div id="related-tabs-1">
 
 									<div class="bz-slider bz-slider--related">
-										<div class="bz-slider__slides js-bz-slider--related">
+										<div class="bz-slider__slides js-bz-slider--related-modal">
 											{% for i in range(0, 5) %}
 											<a class="related__item" href="#">
 												<div class="related__img">
@@ -336,7 +336,7 @@
 								<div id="related-tabs-2">
 
 									<div class="bz-slider bz-slider--related">
-										<div class="bz-slider__slides js-bz-slider--related">
+										<div class="bz-slider__slides js-bz-slider--related-modal">
 											{% for i in range(0, 11) %}
 											<a class="related__item" href="#">
 												<div class="related__img">
@@ -355,7 +355,7 @@
 								<div id="related-tabs-3">
 
 									<div class="bz-slider bz-slider--related">
-										<div class="bz-slider__slides js-bz-slider--related">
+										<div class="bz-slider__slides js-bz-slider--related-modal">
 											{% for i in range(0, 11) %}
 											<a class="related__item" href="#">
 												<div class="related__img">
