--- a/src/templates/card.html
+++ b/src/templates/card.html
@@ -131,7 +131,7 @@ title: Атлас дюпон «izumrud»
 								<div class="tab__title" data-tab="1">Описание</div>
 							</div>
 							<div class="tab__contentes">
-								<div class="tab__content tab__content--car" style="display: block;" data-tab-content="0">
+								<div class="tab__content" style="display: block;" data-tab-content="0">
 
 									<div class="bz-table bz-table--dot">
 										<ul class="bz-table__list">
@@ -147,7 +147,7 @@ title: Атлас дюпон «izumrud»
 
 								</div>
 
-								<div class="tab__content tab__content--product" data-tab-content="1">
+								<div class="tab__content" data-tab-content="1">
 
 									<p>Плотная ткань с гладкокрашенной отделкой. Лицевая сторона гладкая, с мягким атласным блеском. Изнаночная - матовая, с зернистой поверхностью. Материал прочный, эластичный, хорошо драпирующийся. Атлас широко применяется для изготовления праздничных и концертных нарядов, свадебных платьев.</p>
 
