--- a/src/templates/partials/_popup.html
+++ b/src/templates/partials/_popup.html
@@ -222,12 +222,12 @@
 
 								<div class="tab tab--transform js-tab--transform">
 									<div class="tab__wrap">
-										<div class="tab__titles js-tab">
+										<div class="tab__titles js-tab-modal">
 											<div class="tab__title is-active" data-tab="0">Характеристики</div>
 											<div class="tab__title" data-tab="1">Описание</div>
 										</div>
 										<div class="tab__contentes">
-											<div class="tab__content tab__content--car" style="display: block;" data-tab-content="0">
+											<div class="tab__content" style="display: block;" data-tab-content="0">
 
 												<div class="bz-table bz-table--dot">
 													<ul class="bz-table__list">
@@ -244,7 +244,7 @@
 
 											</div>
 
-											<div class="tab__content tab__content--product" data-tab-content="1">
+											<div class="tab__content" data-tab-content="1">
 
 												<p>Плотная ткань с гладкокрашенной отделкой. Лицевая сторона гладкая, с мягким атласным блеском. Изнаночная - матовая,
 													с зернистой поверхностью. Материал прочный, эластичный, хорошо драпирующийся. Атлас широко применяется для изготовления
