--- a/src/sass/layout/_form.scss
+++ b/src/sass/layout/_form.scss
@@ -114,7 +114,7 @@
 	text-align: center;
 	background-color: #fff;
 	@include coverdiv;
-	z-index: z(fixed);
+	z-index: z(absolute);
 	@include trfY(-1000%);
 	transition: all 500ms cubic-bezier(0.645, 0.045, 0.355, 1);
 	@extend %flexColumn;
