--- a/src/sass/layout/_popup.scss
+++ b/src/sass/layout/_popup.scss
@@ -309,8 +309,10 @@
 		}
 
 		&__info{
-			max-width: 100%;
 			margin-right: 0;
+			@include respond-to(xs) {
+				max-width: 100%;
+			}
 		}
 	}
 
