--- a/src/templates/partials/_popup.html
+++ b/src/templates/partials/_popup.html
@@ -200,16 +200,16 @@
 							<!-- end item-select -->
 
 							<div class="button-box">
-								<button class="button button--yellow card__btn card__btn--cart" onclick="pushUp();">
-									Добавить в корзину
-									<span></span>
-									<span title="убрать из корзины"></span>
-								</button>
+								<div class="button-box__in">
+									<button class="button button--yellow card__btn card__btn--cart" onclick="pushUp();">
+										Добавить в корзину
+										<span></span>
+										<span title="убрать из корзины"></span>
+									</button>
 
-								<a href="#" class="button button--default">Подробнее</a>
-
-								<div tooltip="в избранное">
-									<button class="button-icon button-icon--fav js-button-icon--fav card__btn card__btn--fav"></button>
+									<div tooltip="в избранное">
+										<button class="button-icon button-icon--fav js-button-icon--fav card__btn card__btn--fav"></button>
+									</div>
 								</div>
 
 								<span class="card__order-info">В корзине
@@ -385,8 +385,9 @@
 							{% for i in range(0, 4) %} {% include "partials/product/_product-color.html" %} {% endfor %}
 						</div>
 
-					</div>
-					<!-- end card__colors -->
+					</div><!-- end card__colors -->
+
+					<a href="#" class="button button--default">Подробнее</a>
 				</div>
 
 			</div>
