--- a/src/sass/layout/_popup.scss
+++ b/src/sass/layout/_popup.scss
@@ -109,7 +109,7 @@
 		@include respond-to(xs) {
 			columns: auto;
 			width: 100%;
-			margin-bottom: 0px;
+			margin-bottom: 0;
 		}
 
 		&_country {
